# hermes_dreaming

./: .gitignore  README.md  pyproject.toml
.github/workflows/: brain-guard.yml
brain/: __init__.py  cli.py  dream.py  inbox.py  parser.py  search.py  status.py  templates.py  validate.py
companies/: Amazon.md  State_Grid_Corporation_of_China.md  Walmart.md
meta/: GBRAIN_INTEGRATION.md  MATURITY_ROADMAP.md  RULES.md  TELEGRAM_INTAKE.md
scripts/: run_gbrain_nightly.sh  setup_gbrain.sh  setup_gbrain_nightly_cron.sh  validate_brain.sh
templates/: company.md  idea.md  media.md  meeting.md  original.md  person.md
tests/: test_cli.py  test_parser.py  test_templates.py  test_validate.py
